@@ -47,7 +47,7 @@ public abstract class ArrayListWritable<M extends Writable> extends ArrayList<M>
      */
     public ArrayListWritable() {
     }
-    
+
     public ArrayListWritable(ArrayListWritable<M> arrayListWritable) {
         super(arrayListWritable);
     }
